--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,10 @@
     -->
     <title>MediVault</title>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+  />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
